# RecruitIQ

./: .env.example  .gitignore  README.md  docker-compose.yml
admin/: Dockerfile  package-lock.json  package.json
admin/src/app/: globals.css  layout.tsx
admin/src/app/audit-logs/: page.tsx
admin/src/app/login/: page.tsx
admin/src/app/organizations/: page.tsx
admin/src/components/: AppShell.tsx  AuthGuard.tsx
admin/src/lib/: api.ts
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agents/: crews.py  pydantic_agents.py  schemas.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  billing.py  emails.py  interviews.py  offers.py  organizations.py  positions.py  resumes.py  router.py
backend/app/core/: config.py  enums.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: __init__.py
backend/app/services/: auth_service.py  email_service.py  job_service.py  stripe_service.py  subscription_service.py
backend/app/storage/: pdf.py
backend/app/workers/: settings.py  tasks.py
backend/scripts/: seed_platform_admin.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/interviews/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/offers/: page.tsx
frontend/src/components/: AppShell.tsx  AuthGuard.tsx
frontend/src/lib/: api.ts
infra/litellm/: config.yaml
(+4 files in other folders)
